--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-WIP
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Luogo Segreto</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Pagina di input -->
+    <div id="input-page" class="container">
+        <label for="secret-input">Inserisci qua il luogo segreto</label>
+        <input type="text" id="secret-input" placeholder="...">
+        <button id="submit-btn">Invia</button>
+    </div>
+
+    <!-- Pagina segreta (da modificare) -->
+    <div id="secret-page" class="container hidden">
+        <h1>Benvenuto!</h1>
+        <p>Hai trovato il luogo segreto.</p>
+        <!-- Modifica questa sezione come preferisci -->
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
